# Rust_Wasm_Plugin_Example

./: .gitignore  Cargo.toml  README.md
assets/wit/: acme-plugins.wit  val.wit  编译命令.md
crates/host/: Cargo.toml
crates/host/src/: bindings.rs  host.rs  main.rs  prettify.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: bindings.rs  lib.rs  quote_prettify.rs  val.rs
crates/val/: Cargo.toml
crates/val/src/: lib.rs  val.rs
plugin/src/bindings/: new.rs
